tests/api/reference/negative/08-unclosed-virtual.asm
virtual.begin(0x8000)
emit.u8(0x11)
